# evermedia-api

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: health.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/middleware/: __init__.py  cors.py  exception.py  logging.py
app/models/: __init__.py  base.py
app/schemas/: __init__.py  common.py  response.py
app/services/: __init__.py
app/utils/: __init__.py  helpers.py
prisma/: schema.prisma
scripts/: synapse-approve.ts
src/: app.ts  server.ts
src/api/: deps.ts  index.ts
src/api/v1/: router.ts
src/api/v1/endpoints/: alliance.ts  auth.ts  categories.ts  health.ts  index.ts  media.ts  stats.ts  synapse.ts  users.ts
src/core/: config.ts  exceptions.ts  index.ts  logger.ts  security.ts
src/db/: client.ts  index.ts  init.ts  session.ts
src/i18n/: index.ts  middleware.ts  utils.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/middleware/: auth.ts  cors.ts  exception.ts  index.ts  logging.ts
src/schemas/: alliance.ts  auth.ts  category.ts  common.ts  index.ts  media.ts  response.ts  synapse.ts  user.ts
src/services/: index.ts
src/synapse/: client.ts  index.ts  plugin.ts
src/utils/: helpers.ts  index.ts  jwt.ts  multipart.ts
tests/: auth.test.ts  conftest.py  health.test.ts
